--- a/landingPage.html
+++ b/landingPage.html
@@ -9,7 +9,7 @@
 
     <link href="./style.css" rel="stylesheet" />
 
-    <title>Task Board</title>
+    <title>Landing Page</title>
 </head>
 
 <body class="container">
