--- a/landingPage.html
+++ b/landingPage.html
@@ -9,7 +9,7 @@
 
     <link href="./style.css" rel="stylesheet" />
 
-    <title>Landing Page</title>
+    <title>Document</title>
 </head>
 
 <body class="container">
@@ -35,6 +35,10 @@
             <img src="https://i.pinimg.com/736x/09/da/96/09da96ca14b546b26ad8297557bcb5b8.jpg" alt="image" />
         </div>
     </div>
+
+    <footer>
+        <p class="text-muted text-center">&copy; All rights reserved</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
