--- a/pricingPage.html
+++ b/pricingPage.html
@@ -37,7 +37,7 @@
                     <div class="card-body">
                         <p class="card-title">For individuals and small teams looking to manage their tasks.</p>
                         <p class="card-text"><span class="fw-bold">US$0</span> <br /> Free forever</p>
-                        <a href="{% url "registerPage" %}" class="btn btn-primary mb-2">Get started</a>
+                        <a href="#" class="btn btn-primary mb-2">Get started</a>
         
                         <p class="card-text">Manage task and personal to-dos:</p>
                         <ul>
