--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,17 @@
 </head>
 
 <body>
+
+     <nav class="navbar">
+        <a class="navbar-brand" href="#">Home</a>
+        <div class="nav">
+            <a href="#" class="nav-link">Pricing</a>
+            <a href="#" class="nav-link">Contact</a>
+            <a href="#" class="nav-link">Register</a>
+            <a href="#" class="nav-link">Login</a>
+        </div>
+    </nav>
+    
     <div class="position-absolute top-50 start-50 translate-middle">
         <h1>Contact Form</h1>
         <form class="form">
