--- a/loginPage.html
+++ b/loginPage.html
@@ -39,7 +39,7 @@
                         <input class="form-control mb-4" name="password" type="password" placeholder="Password" />
                         <div class="">
                             <button class="btn btn-success w-100" type="submit">Sign In</button>
-                            <a href="/forgot-password" class="nav-link text-center">Forgot password</button></a>
+                            <a href="/forgot-password" class="nav-link text-center">Forgot password</a>
                         </div>
                     </form>
                 </div>
@@ -65,3 +65,4 @@
 </body>
 
 </html>
+
